deploy/manifests/deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-demo
  labels:
    name: quarkus-demo
---
# https://catalog.redhat.com/software/containers/rhel9/postgresql-16/657b03866783e1b1fb87e142
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo-api-postgres
  namespace: quarkus-demo
  labels:
    name: quarkus-demo
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: registry.access.redhat.com/rhel9/postgresql-16:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo-api-postgres
  namespace: quarkus-demo
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo-api
  namespace: quarkus-demo
  labels:
    name: quarkus-demo
spec:
  selector:
    matchLabels:
      app: quarkus-demo-api
  template:
    metadata:
      labels:
        app: quarkus-demo-api
    spec:
      containers:
        - name: quarkus-demo-api
          image: quay.io/openshift-tigerteam/quarkus-demo-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo-api
  namespace: quarkus-demo
spec:
  selector:
    app: quarkus-demo-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo-api-route
  namespace: quarkus-demo
spec:
  host: quarkus-demo-api.apps.ocp.lab.snimmo.com
  to:
    kind: Service
    name: quarkus-demo-api
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
